[gd_scene load_steps=6 format=3 uid="uid://c70rkrengytjx"]

[ext_resource type="Texture2D" uid="uid://cni5thns7ax1p" path="res://Towers/Pointer_Tower/Pointer.png" id="1_nni11"]
[ext_resource type="Script" path="res://Towers/Pointer_Tower/Pointer_Tower.gd" id="1_p6kcu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6nm0x"]
size = Vector2(36, 29)

[sub_resource type="CircleShape2D" id="CircleShape2D_0nv4v"]
radius = 7.95141

[sub_resource type="ArrayMesh" id="ArrayMesh_syte4"]
_surfaces = [{
"2d": true,
"aabb": AABB(-164.5, -197.2, 0, 76.7, 93.5, 0),
"attribute_data": PackedByteArray(0, 64, 225, 62, 51, 243, 207, 62, 0, 64, 225, 62, 0, 64, 209, 62, 51, 115, 225, 62, 0, 192, 211, 62, 102, 198, 226, 62, 0, 192, 211, 62, 102, 70, 227, 62, 0, 128, 212, 62, 102, 134, 227, 62, 0, 128, 212, 62, 0, 128, 232, 62, 102, 198, 212, 62, 0, 128, 232, 62, 51, 51, 213, 62, 0, 128, 233, 62, 51, 179, 213, 62, 0, 128, 233, 62, 0, 128, 214, 62, 205, 12, 234, 62, 0, 128, 221, 62, 51, 179, 233, 62, 0, 128, 221, 62, 51, 51, 233, 62, 0, 64, 226, 62, 154, 185, 232, 62, 0, 64, 226, 62, 51, 51, 229, 62, 0, 128, 229, 62, 205, 12, 228, 62, 0, 128, 229, 62, 0, 128, 223, 62, 51, 19, 230, 62, 0, 128, 223, 62, 205, 172, 229, 62, 0, 0, 221, 62, 102, 38, 229, 62, 0, 0, 221, 62, 0, 192, 228, 62, 0, 192, 217, 62, 0, 64, 226, 62, 0, 192, 217, 62, 0, 32, 224, 62, 0, 128, 215, 62, 0, 160, 219, 62, 0, 128, 215, 62, 154, 217, 218, 62, 0, 224, 214, 62, 0, 0, 216, 62, 0, 128, 215, 62, 0, 0, 216, 62, 0, 192, 216, 62, 0, 64, 214, 62, 0, 192, 218, 62, 0, 64, 214, 62, 0, 192, 218, 62, 51, 211, 214, 62, 0, 0, 220, 62, 205, 108, 216, 62, 0, 0, 220, 62, 0, 64, 216, 62, 0, 64, 220, 62, 0, 192, 208, 62, 154, 185, 220, 62, 0, 192, 208, 62, 154, 121, 221, 62, 0, 128, 207, 62, 154, 57, 222, 62, 0, 128, 207, 62, 0, 192, 222, 62, 0, 96, 207, 62, 0, 192, 222, 62, 51, 179, 206, 62),
"format": 33558545,
"index_count": 105,
"index_data": PackedByteArray(36, 0, 0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 9, 0, 9, 0, 10, 0, 11, 0, 11, 0, 12, 0, 13, 0, 13, 0, 14, 0, 15, 0, 15, 0, 16, 0, 17, 0, 17, 0, 18, 0, 19, 0, 19, 0, 20, 0, 21, 0, 21, 0, 22, 0, 23, 0, 23, 0, 24, 0, 25, 0, 25, 0, 26, 0, 27, 0, 29, 0, 30, 0, 31, 0, 32, 0, 33, 0, 34, 0, 35, 0, 36, 0, 1, 0, 4, 0, 6, 0, 7, 0, 7, 0, 9, 0, 11, 0, 11, 0, 13, 0, 15, 0, 15, 0, 17, 0, 19, 0, 19, 0, 21, 0, 23, 0, 23, 0, 25, 0, 27, 0, 29, 0, 31, 0, 32, 0, 32, 0, 34, 0, 35, 0, 35, 0, 1, 0, 2, 0, 4, 0, 7, 0, 11, 0, 11, 0, 15, 0, 19, 0, 23, 0, 27, 0, 28, 0, 29, 0, 32, 0, 35, 0, 2, 0, 4, 0, 11, 0, 11, 0, 19, 0, 23, 0, 23, 0, 28, 0, 29, 0, 29, 0, 35, 0, 2, 0, 11, 0, 23, 0, 29, 0, 29, 0, 2, 0, 11, 0),
"primitive": 3,
"vertex_count": 37,
"vertex_data": PackedByteArray(0, 0, 246, 194, 52, 51, 64, 195, 0, 0, 246, 194, 0, 0, 59, 195, 104, 102, 244, 194, 0, 0, 49, 195, 208, 204, 233, 194, 0, 0, 49, 195, 208, 204, 229, 194, 0, 0, 46, 195, 208, 204, 227, 194, 0, 0, 46, 195, 0, 0, 188, 194, 104, 230, 44, 195, 0, 0, 188, 194, 52, 51, 43, 195, 0, 0, 180, 194, 52, 51, 41, 195, 0, 0, 180, 194, 0, 0, 38, 195, 152, 153, 175, 194, 0, 0, 10, 195, 104, 102, 178, 194, 0, 0, 10, 195, 104, 102, 182, 194, 0, 0, 238, 194, 48, 51, 186, 194, 0, 0, 238, 194, 104, 102, 214, 194, 0, 0, 212, 194, 152, 153, 223, 194, 0, 0, 212, 194, 0, 0, 2, 195, 104, 102, 207, 194, 0, 0, 2, 195, 152, 153, 210, 194, 0, 0, 12, 195, 208, 204, 214, 194, 0, 0, 12, 195, 0, 0, 218, 194, 0, 0, 25, 195, 0, 0, 238, 194, 0, 0, 25, 195, 0, 0, 255, 194, 0, 0, 34, 195, 0, 128, 17, 195, 0, 0, 34, 195, 152, 153, 20, 195, 0, 128, 36, 195, 0, 0, 32, 195, 0, 0, 34, 195, 0, 0, 32, 195, 0, 0, 29, 195, 0, 0, 39, 195, 0, 0, 21, 195, 0, 0, 39, 195, 0, 0, 21, 195, 52, 179, 36, 195, 0, 0, 16, 195, 204, 76, 30, 195, 0, 0, 16, 195, 0, 0, 31, 195, 0, 0, 15, 195, 0, 0, 61, 195, 152, 25, 13, 195, 0, 0, 61, 195, 152, 25, 10, 195, 0, 0, 66, 195, 152, 25, 7, 195, 0, 0, 66, 195, 0, 0, 5, 195, 0, 128, 66, 195, 0, 0, 5, 195, 52, 51, 69, 195)
}]

[node name="pointer_tower" type="StaticBody2D"]
script = ExtResource("1_p6kcu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, -2.5)
shape = SubResource("RectangleShape2D_6nm0x")

[node name="fire_delay" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="range" type="Area2D" parent="."]

[node name="range_shape" type="CollisionShape2D" parent="range"]
scale = Vector2(20, 20)
shape = SubResource("CircleShape2D_0nv4v")

[node name="Pointer" type="MeshInstance2D" parent="."]
position = Vector2(-59, 52)
rotation = 1.5708
scale = Vector2(0.432855, 0.431016)
mesh = SubResource("ArrayMesh_syte4")
texture = ExtResource("1_nni11")

[node name="point" type="Marker2D" parent="Pointer"]
position = Vector2(-131.685, -204.168)
rotation = -1.5708
scale = Vector2(2.3201, 2.31024)

[node name="tempContainer" type="Node" parent="."]

[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
